--- a/demo.html
+++ b/demo.html
@@ -4,14 +4,16 @@
 	<meta charset="utf-8" />
 	<meta name='viewport' content='width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no' />
 	<meta name='X-UA-Compatible' content='IE=edge,chrome=1' />
-	<title></title>
+	<title>Demo RequireJS</title>
 	
 	<link type="text/css" rel="stylesheet" href="css/base.css" />
 	<link type="text/css" rel="stylesheet" href="css/main.css" />
-	<script type="text/javascript" src="js/main.js"></script>
+	
+	
+	<script data-main="js/main.js" src="js/require.js"></script>
 </head>
 <body>
-
-
+	<h1>RequireJS Demo</h1>
+	<button id="j_test">测试</button>
 </body>
 </html>
